Supporting frame interpolation

--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -144,6 +144,7 @@
               <button id="add-poi">Add Point of Interest</button>
               <button id="clear-pois">Clear Points of Interest</button>
               <button id="download-pois">Download Points of Interest</button>
+              <label>Interpolate Frames <input id="interpolate-frames" type="checkbox"></label>
             </div>
           </div>
         </div>
