Adjusted cursor toggling

--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -84,9 +84,13 @@
       #input-group input[type="range"] {
         width: 20em;
       }
+
       .ctrls {
         margin-left: 20px;
         display: flex;
+      }
+      .waiting-cursor {
+        cursor: wait !important;
       }
     </style>
   </head>
