Cleaned up - Modified interpolation - Began code for new fractals

--- a/pages/fractal-viewer.html
+++ b/pages/fractal-viewer.html
@@ -130,7 +130,7 @@
             <select id="select-fract">
               <option value="0" selected>Mandelbrot</option>
               <option value="1">Burning Ship</option>
-              <!-- <option value="chirikov">Chirikov Map</option> -->
+              <!-- <option value="2"></option> -->
             </select>
             <div>
               <button id="changes-btn" style="width: 8em;">Apply Changes</button>
